k8s/products-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - image: rhythmshandlya/product
          name: product

---
apiVersion: v1
kind: Service
metadata:
  name: product-srv
spec:
  selector:
    app: product
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
