k8s/search-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search
  template:
    metadata:
      labels:
        app: search
    spec:
      containers:
        - image: rhythmshandlya/search
          name: search

---
apiVersion: v1
kind: Service
metadata:
  name: search-srv
spec:
  selector:
    app: search
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
