k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: shopper.com
      http:
        paths:
          - path: /api/products(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: product-srv
                port:
                  number: 3002

          - path: /api/search(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: search-srv
                port:
                  number: 3003
